--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,8 @@ body{
 	width: 90%;
 	box-sizing: border-box;
 }
+
+.borderX:nth-child(3n+1) p{
+    border-bottom: 1px solid rgb(175, 187, 199);
+    padding-bottom: 16px;
+}
