--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -14,7 +14,8 @@
     justify-content: space-evenly;
     padding: 20px;
     text-align: center;
-    margin: 50px 0;
+    margin-top: 38px ;
+    margin-bottom: 50px;
 }
 
 
@@ -77,11 +78,6 @@
 
 
 
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
-
-
-
-
 :root{
     --color-esqueleto:white;
 }
@@ -108,7 +104,7 @@
     max-width: 1200px;
     margin: auto;
     margin-top: 80px;
-    padding-bottom: 78px;
+    padding-bottom: 82px;
     border-bottom: 1px solid #ad8a1f;
 }
 
