--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 html{
-	background-color: rgb(249, 235, 234);
+	background-color: gainsboro;
    	overflow-x: hidden;
    	font-family: sans-serif;
    	padding: 0;
@@ -36,6 +36,7 @@ a{
 	color: #ad8a1f;
 	font-style: italic;
 	padding-bottom: 6px;
+	text-decoration: underline;
 }
 
 @media (max-width: 800px) {
