--- a/src/pages/inicio/inicio.css
+++ b/src/pages/inicio/inicio.css
@@ -60,7 +60,7 @@
 
 .displayX div:nth-child(2) h2{
 	font-size: 12px;
-	color: orange;
+	color: #ad8a1f;
 	font-weight: 500;
 }
 .displayX div:nth-child(2) h3{
@@ -78,7 +78,7 @@
 	border: none;
 	padding: 10px 6px;
 	font-size: 14px;
-	background-color: orange;
+	background-color: #ad8a1f;
 	font-weight: 500;
 	color: white;
 	border-radius: 4px;
