--- a/src/pages/inicio/inicio.css
+++ b/src/pages/inicio/inicio.css
@@ -1,13 +1,13 @@
 
 .inicioContainer{
-	margin-top: 100px;
+	margin-top: 0;
 }
 
 .buttonsContainer{
 	display: flex;
 	justify-content: space-evenly;
 
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 }
 
 
@@ -94,6 +94,10 @@
 	color: gray;
 }
 
+.imgX{
+	width: 100%;
+	margin-bottom: 50px;
+}
 
 
 
