--- a/src/pages/contacto/contacto.css
+++ b/src/pages/contacto/contacto.css
@@ -1,7 +1,7 @@
 
 .contactoContainer h4, p, h3, h3, h5{
 	text-align: center;
-	color: var(--bs-gray-700);
+	color: #ad8a1f;
 	font-weight: 500;
 }
 
