--- a/src/pages/contacto/contacto.css
+++ b/src/pages/contacto/contacto.css
@@ -1,31 +1,31 @@
 
-.contactoContainer h4, p, h3, h3, h5{
-	text-align: center;
+.contactoContainer>h4{
+text-align: center;
 	color: #ad8a1f;
 	font-weight: 500;
 }
 
 
-.contactoContainer h2{
+.contactoContainer> h2{
 	text-align: center;
 	color: var(--bs-gray-700);
 	font-weight: 300;
 }
 
 
-.contactoContainer img{
+.contactoContainer> img{
 	width: 25%;
 }
 
 
 
-.contactoContainer div{
+.contactoContainer> div{
 	width: 25%;
 	border: 1px solid red;
 }
 
 @media (max-width: 1000px) {
-	.contactoContainer img{
+	.contactoContainer> img{
 		width: 50%;
 
 	}
@@ -33,11 +33,18 @@
 
 
 @media (max-width: 600px) {
-	.contactoContainer img{
+	.contactoContainer> img{
 		width: 100%;
 
 	}
 }
-
+.contacto{
+	width: 100%;
+	text-align: center;
+	margin-top: 20px;
+}
+.contacto> img{
+		width: 320px;
+}
 
 
