--- a/src/pages/directorio/parroquias.css
+++ b/src/pages/directorio/parroquias.css
@@ -1,54 +1,118 @@
-.parroquias {
-	font-family: sans-serif;
-	padding: 4px;
+.
+
+
+
+
+
+
+
+
+
+
+.inicioContainer{
+	margin-top: 0;
 }
 
-.parroquias> h5 {
-	font-weight: bolder;
-}
-
-.parroquias p {
-	font-weight: lighter;
-	color: Black;
-}
-
-.parroquias p span {
-	font-weight: bold;
-	color: rgb(80, 80, 80);
-}
-
-.imgParroquias {
-	height: 380px;
-	background: no-repeat center;
-	background-size: contain;
-}
-
-.listParroquias {
-	padding: 10px;
-}
-
-
-
-
-.parroquiasButtons{
+.buttonsContainer{
 	display: flex;
 	justify-content: space-evenly;
 	margin-bottom: 20px;
 }
 
-.parroquiasButtons> button, [type="search"], select {
-	width: 200px;
-	margin-bottom: 20px;
-	padding: 4px 0;
+
+
+.buttonsContainer button{
+	min-width: 160px;
+	padding: 10px 0;
+	margin-bottom: 10px;
+	font-size: 12px;
+	letter-spacing: .4px;
+}
+
+.d-none{
+	display: none;
+}
+
+.displayX{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+
+
+
+
+.displayX div{
+	width: 40%;
+}
+
+.displayX div img{
+	width: 100%;
+}
+
+@media (max-width: 1000px) {
+	.buttonsContainer{
+		flex-direction: column;
+	}
+    .displayX{
+    	flex-direction: column;
+    }
+    .displayX div{
+    	width: 100%;
+    }
+}
+
+
+.displayX div:nth-child(2) *{
+	margin:40px ;
+}
+
+.displayX div:nth-child(2) h2{
+	font-size: 12px;
+	color: #ad8a1f;
+	font-weight: 500;
+}
+.displayX div:nth-child(2) h3{
+	font-size: 18px;
+	font-weight: 500;
+	color: #363231;
+}
+.displayX div:nth-child(2) p{
+	font-size: 14px;
+	color: gray;
+	font-weight: 500;
+}
+
+.displayX div:nth-child(2) button{
+	border: none;
+	padding: 10px 6px;
+	font-size: 14px;
+	background-color: #ad8a1f;
+	font-weight: 500;
+	color: white;
+	border-radius: 4px;
+}
+
+
+.bg-dark{
+	color: navy;
+	font-weight: 600;
+}
+
+
+.bg-ligth{
 	color: gray;
 }
 
-
-@media (max-width: 1000px) {
-	.parroquiasButtons{
-		flex-direction: column;
-	}
-	.parroquiasButtons> button, [type="search"], select {
-		width: 100%;
-	}
+.imgX{
+	width: 100%;
+	margin-bottom: 50px;
 }
+
+
+
+
+
+
+
+
