--- a/src/pages/inicio/inicio.css
+++ b/src/pages/inicio/inicio.css
@@ -1,108 +1,25 @@
-
-.inicioContainer{
-	margin-top: 0;
+.directorio {
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
 
-.buttonsContainer{
-	display: flex;
-	justify-content: space-evenly;
-	margin-bottom: 20px;
+.itemDirectorio {
+    width: 340px;
+    height: 190px;
+    padding-top: 10px;
+    padding-left: 16px;
+    cursor: pointer;
+    background-image: url(https://www.arquidiocesisdehermosillo.org/media/com_mtree/images/cats/o/84_catedral.jpg);
+    background-size: contain;
 }
 
-
-
-.buttonsContainer button{
-	min-width: 160px;
-	padding: 10px 0;
-	margin-bottom: 10px;
-	font-size: 12px;
-	letter-spacing: .4px;
+.itemDirectorio> a{
+    text-decoration: none;
 }
 
-.d-none{
-	display: none;
+.parroquiasDirectorio {
+    color: rgba(51, 51, 51, 0.742);
+    font-weight: bold;
+    font-size: 20px;
 }
-
-.displayX{
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-}
-
-
-
-
-.displayX div{
-	width: 40%;
-}
-
-.displayX div img{
-	width: 100%;
-}
-
-@media (max-width: 1000px) {
-	.buttonsContainer{
-		flex-direction: column;
-	}
-    .displayX{
-    	flex-direction: column;
-    }
-    .displayX div{
-    	width: 100%;
-    }
-}
-
-
-.displayX div:nth-child(2) *{
-	margin:40px ;
-}
-
-.displayX div:nth-child(2) h2{
-	font-size: 12px;
-	color: #ad8a1f;
-	font-weight: 500;
-}
-.displayX div:nth-child(2) h3{
-	font-size: 18px;
-	font-weight: 500;
-	color: #363231;
-}
-.displayX div:nth-child(2) p{
-	font-size: 14px;
-	color: gray;
-	font-weight: 500;
-}
-
-.displayX div:nth-child(2) button{
-	border: none;
-	padding: 10px 6px;
-	font-size: 14px;
-	background-color: #ad8a1f;
-	font-weight: 500;
-	color: white;
-	border-radius: 4px;
-}
-
-
-.bg-dark{
-	color: navy;
-	font-weight: 600;
-}
-
-
-.bg-ligth{
-	color: gray;
-}
-
-.imgX{
-	width: 100%;
-	margin-bottom: 50px;
-}
-
-
-
-
-
-
-
-
