--- a/src/pages/contacto/contacto.css
+++ b/src/pages/contacto/contacto.css
@@ -1,13 +1,3 @@
-.
-
-
-
-
-
-
-
-
-
 
 .inicioContainer{
 	margin-top: 0;
@@ -105,7 +95,24 @@
 }
 
 
+.titulo{
+	text-align: center;
+	margin-bottom: 60px;
+}
 
+.titulo h4{
+	font-size: 12px;
+	color: #ad8a1f;
+	font-weight: 500;
+}
+
+.titulo h2{
+	font-size: 32px;
+	color: #222222;
+	font-weight: 500;
+	font-family: sans;
+	font-style: oblique;
+}
 
 
 
