--- a/src/pages/inicio/directorio.css
+++ b/src/pages/inicio/directorio.css
@@ -34,6 +34,7 @@ parroquias {
 	display: flex;
 	justify-content: space-evenly;
 	margin-bottom: 20px;
+	margin-top: 24px;
 }
 
 .parroquiasButtons> button, [type="search"], select {
@@ -47,6 +48,7 @@ parroquias {
 @media (max-width: 1000px) {
 	.parroquiasButtons{
 		flex-direction: column;
+		margin-top: -20px;
 	}
 	.parroquiasButtons> button, [type="search"], select {
 		width: 100%;
