--- a/src/pages/inicio/inicio.css
+++ b/src/pages/inicio/inicio.css
@@ -31,7 +31,7 @@
     width: 80%;
     margin: 5% auto;
     display: grid;
-    gap: 60px;
+    gap: 50px;
     grid-auto-rows: auto;
     grid-template-columns: repeat(auto-fill, minmax(min(100%, 23rem), 1fr));
     grid-auto-flow: dense;
@@ -47,14 +47,16 @@
 
 
 .gallery>div{
-/*    user-select: none;*/
+    user-select: none;
+    border: none;
     cursor: pointer;
     grid-column: span 1;
-    background-color: slategray;
+/*    background-color: slategray;*/
     padding: 20px;
+    font-size: 36px;
 
     display: flex;
-    height: 190px;
+    height: 200px;
   /*  background-image: url(https://www.arquidiocesisdehermosillo.org/media/com_mtree/images/cats/o/84_catedral.jpg);
     background-size: contain;*/
 }
@@ -62,8 +64,11 @@
 .gallery>div>*{
     margin: auto;
     color: white;
-    font-weight: bold;
-    font-size: 20px;
+    font-size: 34px;
+    text-shadow: #FC0 1px 0 10px;
+    text-shadow: 1px 1px 4px black, 0 0 16px black, 0 0 10px black;
+    letter-spacing:.8px;
+
   /*  display: flex;
     justify-content: space-around;
      flex-direction: column;*/
