--- a/src/pages/pgp/PGP.css
+++ b/src/pages/pgp/PGP.css
@@ -6,7 +6,7 @@
 .buttonsContainer{
 	display: flex;
 	justify-content: space-evenly;
-	margin-bottom: 20px;
+	margin-bottom: 50px!important;
 }
 
 
@@ -14,7 +14,6 @@
 .buttonsContainer button{
 	min-width: 160px;
 	padding: 10px 0;
-	margin-bottom: 10px;
 	font-size: 12px;
 	letter-spacing: .4px;
 }
@@ -96,7 +95,11 @@
 
 .imgX{
 	width: 100%;
-	margin-bottom: 50px;
+	margin: 50px 0;
+	max-width: 1280px;
+	  transform: translate(-50%);
+	  margin-left: 50%;
+
 }
 
 
