--- a/src/pages/inicio/inicio.css
+++ b/src/pages/inicio/inicio.css
@@ -29,7 +29,7 @@
 
 .gallery{
     width: 80%;
-    margin: 3% auto;
+    margin: 10px auto;
     display: grid;
     gap: 50px;
     grid-auto-rows: auto;
