--- a/src/pages/provincia/provincia.css
+++ b/src/pages/provincia/provincia.css
@@ -3,7 +3,7 @@
 	margin-top: 0;
 }
 
-.buttonsContainer{
+.buttonsContainerp{
 	display: flex;
 	justify-content: space-evenly;
 	margin-bottom: 20px;
@@ -11,10 +11,10 @@
 
 
 
-.buttonsContainer button{
+.buttonsContainerp button{
 	width: 200px;
 	padding: 10px 0;
-	margin-bottom: 8px;
+	margin-bottom: 32px;
 	font-size: 12px;
 	letter-spacing: .4px;
 	border: 1px solid rgba(111,111,111, .4);
@@ -47,10 +47,10 @@
 }
 
 @media (max-width: 1000px) {
-	.buttonsContainer{
+	.buttonsContainerp, .buttonsContainer{
 		flex-direction: column;
 	}
-	.buttonsContainer>button{
+	.buttonsContainerp>button, .buttonsContainer>button{
 		width: 100%;
 		margin-bottom: 26px;
 	}
