--- a/src/pages/inicio/parroquias/parroquias.css
+++ b/src/pages/inicio/parroquias/parroquias.css
@@ -43,6 +43,16 @@ parroquias {
 
 .display-none{
 	display: none;
+	margin-bottom: 0;
+}
+
+.rotate{
+	transform: rotateY(3.142rad);
+	width: 16px;
+	display: block;
+	position: relative;
+	top: -20px;
+	left: 70px;
 }
 
 
